--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 
 apt {
     arguments {
-        androidManifestFile variant.outputs[0].processResources.manifestFile
+        androidManifestFile variant.outputs[0]?.processResources?.manifestFile
         resourcePackageName 'com.luleo.myapplications'
     }
 }
