--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,12 @@
             </intent-filter>
         </activity>
 
+        <receiver android:name=".broadcast.MyBroadcast_">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+            </intent-filter>
+        </receiver>
+
         <activity
             android:name=".activities.ChatActivity_"
             android:configChanges="orientation|keyboardHidden|navigation|screenSize"
