--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
-def AAVersion = '3.3.2'
+def AAVersion = '4.0.0'
 //def AAVersion = "4.0-SNAPSHOT"
 
 buildscript {
@@ -27,7 +27,7 @@ apt {
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.luleo.myapplications"
@@ -70,14 +70,14 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     //http://docs.spring.io/spring-android/docs/
     compile 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
-    compile 'com.squareup.okhttp:okhttp:2.5.0'
+    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:cardview-v7:23.2.0'
+    compile 'com.android.support:recyclerview-v7:23.2.0'
+    compile 'com.android.support:design:23.2.0'
+    compile 'com.squareup.okhttp:okhttp:2.6.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.google.code.gson:gson:2.4'
+    compile 'com.google.code.gson:gson:2.5'
 
 
     /*
@@ -212,6 +212,11 @@ dependencies {
     * */
     compile "org.androidannotations:androidannotations-api:$AAVersion"
     apt "org.androidannotations:androidannotations:$AAVersion"
+    compile "org.androidannotations:ormlite-api:$AAVersion"
+    apt "org.androidannotations:ormlite:$AAVersion"
+    apt "org.androidannotations:otto:$AAVersion"
+    compile "org.androidannotations:rest-spring-api:$AAVersion"
+    apt "org.androidannotations:rest-spring:$AAVersion"
 
     /*
     *https://github.com/glomadrian/loading-balls
